# eagle_cv_recruiting

./: CMakeLists.txt  README.md
doc/: Technical_report.docx
src/: backup.cpp  color_detector.cpp  main.cpp
src/utils/: constants.cpp  constants.h  processing.cpp  processing.h
